--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				<div class="elementor-element elementor-element-6e084e4e elementor-align-justify elementor-widget__width-initial elementor-widget-mobile__width-inherit elementor-widget elementor-widget-button" data-id="6e084e4e" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-md" href="https://pay.kiwify.com.br/12J5p7e">
+			<a class="elementor-button elementor-button-link elementor-size-md" href="https://pay.cakto.com.br/3fmx6e8_558568">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">COMPRAR AGORA!</span>
 					</span>
