--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				</div>
 				<div class="elementor-element elementor-element-7060a7da elementor-widget elementor-widget-text-editor" data-id="7060a7da" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<p data-start="73" data-end="151">Receitas de baixas calorias criadas pela nutri Maria Aguiar, com sabor delicioso de verdade.</p>						</div>
+							<p data-start="73" data-end="151">Receitas de baixas calorias criadas pela nutri Fernanda Cantanhede, com sabor delicioso de verdade.</p>						</div>
 				</div>
 				<div class="elementor-element elementor-element-566039f5 elementor-widget elementor-widget-image-carousel" data-id="566039f5" data-element_type="widget" data-settings="{" slides_to_show_mobile":"1","navigation":"none","autoplay_speed":0,"speed":2500,"autoplay":"yes","infinite":"yes","image_spacing_custom":{"unit":"px","size":20,"sizes":[]},"image_spacing_custom_tablet":{"unit":"px","size":"","sizes":[]}}"="" data-widget_type="image-carousel.default">
 				<div class="elementor-widget-container">
