--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	
 <script src="js/latest.js" data-utmify-prevent-xcod-sck="" data-utmify-prevent-subids="" async="" defer=""></script>
 	<meta charset="UTF-8">
-		<title>cafe da manha – Receitas</title>
+		<title>Receitas – cafe da manha</title>
 <meta name="robots" content="max-image-preview:large">
 	<style>img:is([sizes="auto" i], [sizes^="auto," i]) { contain-intrinsic-size: 3000px 1500px }</style>
 	<link rel="alternate" type="application/rss+xml" title="Feed para Receitas »" href="https://areceitadodia.com/feed/">
