Update index.html 3

--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				</div>
 				<div class="elementor-element elementor-element-3ffc716c elementor-widget elementor-widget-image" data-id="3ffc716c" data-element_type="widget" data-widget_type="image.default">
 				<div class="elementor-widget-container">
-													<img loading="lazy" decoding="async" width="800" height="744" src="WEB-CAPA-e1747862716403-1024x952.webp.jpeg" class="attachment-large size-large wp-image-5969" alt="" srcset="images/WEB-CAPA-e1747862716403-1024x952.webp 1024w, images/WEB-CAPA-e1747862716403-300x279.webp 300w, images/WEB-CAPA-e1747862716403-768x714.webp 768w, images/WEB-CAPA-e1747862716403.webp 1080w" sizes="(max-width: 800px) 100vw, 800px">													</div>
+													<img loading="lazy" decoding="async" width="800" height="744" src="WEB-CAPA-e1747862716403-1024x952.webp.jpeg" class="attachment-large size-large wp-image-5969" alt="" srcset="WEB-CAPA-e1747862716403-1024x952.webp.jpeg" sizes="(max-width: 800px) 100vw, 800px">													</div>
 				</div>
 				<div class="elementor-element elementor-element-7a7489ff elementor-widget__width-inherit elementor-widget elementor-widget-heading" data-id="7a7489ff" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
