--- a/index.html
+++ b/index.html
@@ -1,7 +1,20 @@
 <!DOCTYPE html><html lang="pt-BR"><head>
     <meta name="facebook-domain-verification" content="vitz16zdmscn1q4hniiq9jy8hjwirb">
 
-	
+	<!-- Meta Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '1125280262863080');
+fbq('track', 'PageView');
+</script>
+<!-- End Meta Pixel Code -->
 	
 <script src="js/latest.js" data-utmify-prevent-xcod-sck="" data-utmify-prevent-subids="" async="" defer=""></script>
 	<meta charset="UTF-8">
@@ -150,7 +163,12 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 			</style>
 				<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"><script src="js/wp-emoji-release.min.js" defer=""></script><script src="js/wp-emoji-release.min_1.js" defer=""></script></head>
 <body class="wp-singular page-template page-template-elementor_canvas page page-id-5279 wp-theme-hello-elementor elementor-default elementor-template-canvas elementor-kit-5 elementor-page elementor-page-5279">
-			<div data-elementor-type="wp-page" data-elementor-id="5279" class="elementor elementor-5279" data-elementor-post-type="page">
+			
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=1125280262863080&ev=PageView&noscript=1"
+/></noscript>
+	
+	<div data-elementor-type="wp-page" data-elementor-id="5279" class="elementor elementor-5279" data-elementor-post-type="page">
 				<div class="elementor-element elementor-element-311f29ef e-flex e-con-boxed e-con e-parent e-lazyloaded" data-id="311f29ef" data-element_type="container" data-settings="{" background_background":"classic"}"="">
 					<div class="e-con-inner">
 				<div class="elementor-element elementor-element-74038685 elementor-widget__width-inherit elementor-widget elementor-widget-heading" data-id="74038685" data-element_type="widget" data-widget_type="heading.default">
